[package]
name = "global-search"
version = "0.1.0"
authors = ["Matt Ickstadt <mattico8@gmail.com>"]

[dependencies]
actix = "0.5.5"
actix-web = "0.4.10"
elasticlunr-rs = { git = "https://github.com/mattico/elasticlunr-rs" }
env_logger = "0.5.6"
error-chain = "0.11.0"
failure_derive = "0.1.1"
futures = "0.1.20"
log = "0.4.1"
mdbook = { git = "https://github.com/rust-lang-nursery/mdbook" }
serde = "1"
serde_derive = "1"
serde_json = "1"
tantivy = "0.5"
tempdir = "0.3.7"
